crud products, recompile dependencies, etc
